--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,60 @@
   font-weight: 400;
   font-style: normal;
 }
+.display-flex{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.bg-light{
+  background-color: rgba(255, 144, 14, 0.1);
+}
+.brand{
+  font-weight: 700;
+  font-size: 3rem;
+}
+.nav-item{
+  list-style: none;
+  margin-right: 30px;
+}
+.nav-link{
+  text-decoration: none;
+}
+.text-gray{
+  color: #424242;
+}
+.text-light-gray{
+  color: #727272;
+}
+.navbar, .banner{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+.banner-content{
+  max-width: 850px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.banaaer-title{
+  font-weight: 700;
+  font-size: 4rem;
+}
+.btn-primary{
+  background-color: #FF900E;
+  color: white;
+  padding: 20px 25px;
+  border-radius: 8px;
+  font-weight: 600;
+  font-size: 1.25rem;
+  border: none;
+}
+.banner-img{
+  width: 100%;
+}
+@media screen and(max-width:576px) {
+  .navbar, .nav-link{
+    flex-direction: column;
+  }
+  
+}
